--- a/demo01/src/main/res/layout/first_activity.xml
+++ b/demo01/src/main/res/layout/first_activity.xml
@@ -7,5 +7,12 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rvFirstPersonas"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="0dp"
+        android:layout_weight="1"/>
+
+    <Button
+        android:id="@+id/btFirstAgregar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Agregar"/>
 </LinearLayout>
